--- a/Maquette/Assets/CSS/index.css
+++ b/Maquette/Assets/CSS/index.css
@@ -1,8 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Rubik+Mono+One&display=swap');
 
+h1 {
+    background-color: #FA2F6E;
+    color: #1B1464;
+    padding-left: 0.3ch;
+    padding-right: 0.3ch;
+    font-family: "Rubik Mono One";
+}
+a#connexion {
+    display: flex;
+}
+
+a img {
+    border: #fA2F6E 0.5px solid; 
+    border-radius: 0.5ch;
+    height: 5ch;
+}
+
+a :hover {
+    background-color: rgba(255, 255, 255, 0.8);
+}
+.card-header img {
+    width: 4ch;
+}
+#top {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2ch;
+    margin-bottom: 4ch;
+    margin-left: 2ch;
+    margin-right: 2ch;
+   
+}
 /* Classement */
 .scrollcards {
-    background-color: #fff;
     overflow: auto;
     white-space: nowrap;
 }
@@ -10,12 +41,16 @@
 div.scrollcards .card {
     display: inline-block;
     border: 0;
-    padding: 14px;
     text-decoration: none;
     height: auto; 
-    width: 30ch;
+    width: 21ch;
 }
-
+.card-header {
+    display: flex;
+    justify-content: space-between;
+    color: #FA2F6E;
+    font-weight: bold;
+}
 .card {
     margin-right: 2.5ch;
     margin-left: 2.5ch;
@@ -26,7 +61,7 @@ div.scrollcards .card {
     white-space: normal;
     text-align: center;
     margin-top: 0.5ch;
-    margin-bottom: 1.5ch;
+    font-size: 1.7ch;
 }
 
 .t {
@@ -34,13 +69,14 @@ div.scrollcards .card {
 }
 
 .p {
-    height: 5ch;
+    height: 3ch;
     width: auto;
     margin-right: 1ch;
 }
 
 .ClassementVotesContainer {
     justify-content: space-evenly;
+    padding-bottom: 1.5ch;
 }
 
 .ClassementVotes {
@@ -48,20 +84,20 @@ div.scrollcards .card {
 }
 
 .ClassementVotes p {
-    font-size: 3ch;
+    font-size: 1.7ch;
     font-weight: bold;
 }
 
 #top1 {
-    width: 36ch;
+    width: 27ch;
 }
 
 #top2 {
-    width: 34ch;
+    width: 25ch;
 }
 
 #top3 {
-    width: 32ch;
+    width: 23ch;
 }
 
 /* Vote */
@@ -77,7 +113,11 @@ body {
     color: #FA2F6E; 
 }
 
-h1 {
+h2 {
+    background-color: #FA2F6E;
+    color: #1B1464;
+    padding-left: 0.3ch;
+    padding-right: 0.3ch;
     text-align: center;
     font-family: 'Rubik Mono One'
 }
@@ -128,4 +168,105 @@ img#affiche {
     width: 400px;
     margin: 0 auto;
     display: inline-block;
+}
+
+.header {
+    background-color: #1B1464;
+    color: #FA2F6E;
+    width: 100%;
+    padding: 1rem 0;
+    text-align: center;
+}
+
+main {
+    /* width: 80%; */
+    max-width: 1200px;
+    margin: 2rem 0;
+    display: flex;
+    justify-content: center;
+}
+
+/* .stats {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 2rem;
+    width: 100%;
+} */
+.containerflex{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+}
+
+.stat-item {
+    width: 200px;
+    background-color: #FA2F6E;
+    padding: 1.2rem;
+    border-radius: 12px;
+    border: 5px solid #ccc;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+.stat-item:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+    border-color: #007BFF;
+}
+
+.stat-item img {
+    max-width: 150px;
+    height: auto;
+    border-radius: 12px;
+    margin: 1rem 0;
+}
+
+.stat-item h2 {
+    margin-top: 0;
+    font-size: 0.95rem;
+    color: #fdfdfd;
+    border-bottom: 2px solid #f4f4f4;
+    padding-bottom: 0.5rem;
+    transition: color 0.3s ease, border-color 0.3s ease;
+}
+
+.stat-item:hover h2 {
+    color: #007BFF;
+    border-color: #007BFF;
+}
+
+.stat-item p {
+    font-family:"Rubik Mono One", monospace; 
+    font-size: 1.3rem;
+    margin: 1rem 0 0;
+    color: #1B1464;
+    transition: color 0.3s ease;
+}
+
+.stat-item:hover p {
+    color: #1B1464;
+}
+
+.card {
+    background-color: white;
+}
+             
+
+
+.collapse {
+    background-color: #a4aebb;
+  }
+
+.custom-line {
+    height: 10px;
+    background-color: #FA2F6E; /* couleur noire */
+}
+
+footer {
+    text-align: center;
 }
